fixing workflow